# shotgun_api3

./: pyproject.toml
example/: pyproject.toml  test_import.py
example/shotgun_api3_example.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
shotgun_api3/: shotgun.py
shotgun_api3/lib/: README.md  __init__.py
tests/: base.py  test_client.py  test_unit.py
