[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shotgun_api3"
version = "3.8.4"
description = "Flow Production Tracking Python API"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Autodesk" }]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = ["requests>=2.31.0", "certifi>=2023.7.22", "pyparsing>=3.0.0"]

[project.urls]
Homepage = "https://github.com/shotgunsoftware/python-api"
Documentation = "http://developer.shotgridsoftware.com/python-api"
Repository = "https://github.com/shotgunsoftware/python-api"

[project.optional-dependencies]
dev = [
    "coverage",
    "coveralls==1.1",
    "flake8",
    "nose==1.3.7",
    "nose-exclude==0.5.0",
    "pytest",
    "pytest-azurepipelines",
    "pytest-coverage",
]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.setuptools.package-data]
"shotgun_api3.lib" = ["*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["shotgun_api3"]
omit = ["*/tests/*", "*/lib/*", "setup.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    "shotgun_api3/lib",
]

[dependency-groups]
dev = [
    "coverage>=7.2.7",
    "coveralls==1.1",
    "flake8>=5.0.4",
    "nose==1.3.7",
    "nose-exclude==0.5.0",
    "pytest>=7.4.4",
    "pytest-azurepipelines>=1.0.5",
    "pytest-coverage>=0.0",
]
