[project]
name = "shotgun-api3-example"
version = "0.1.0"
description = "Example project to test shotgun_api3 git installation"
requires-python = ">=3.8"
dependencies = [
    "shotgun-api3 @ git+https://github.com/studio-momo/shotgun_api3.git@main",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
